[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI/SimpleTouchControls.gd" id="SimpleTouchControls_script"]

[node name="SimpleTouchControls" type="CanvasLayer"]
script = ExtResource("SimpleTouchControls_script")

[node name="TouchUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftSide" type="Control" parent="TouchUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VirtualJoystick" type="Control" parent="TouchUI/LeftSide"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0

[node name="JoystickBase" type="ColorRect" parent="TouchUI/LeftSide/VirtualJoystick"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.5)

[node name="JoystickKnob" type="ColorRect" parent="TouchUI/LeftSide/VirtualJoystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.8, 0.8, 0.8, 0.8)

[node name="RightSide" type="Control" parent="TouchUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = 150.0

[node name="ShootButton" type="Button" parent="TouchUI/RightSide"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
text = "ðŸ”«
SHOOT"

[connection signal="button_down" from="TouchUI/RightSide/ShootButton" to="." method="_on_shoot_button_down"]
[connection signal="button_up" from="TouchUI/RightSide/ShootButton" to="." method="_on_shoot_button_up"]